Add support for updating in-text citations